2016-01-27  Barton E. Schaefer  <schaefer@zsh.org>

	* 37810: Src/Modules/zutil.c: repair handling of backslashes and
	of names starting with "+"/":"/"=" in zparseopts option specs

2016-01-26  Eric Cook  <llua@gmx.com>

	* 37788: Completion/Zsh/Context/_subscript: fix completion of
	associative array keys

2016-01-26  Barton E. Schaefer  <schaefer@zsh.org>

	* 37802: Doc/Zsh/mod_zutil.yo: Clarify zparseopts description.

	* 37802: Src/Modules/zutil.c: zparseopts "X::" specifier should
	also look for the optional argument in the word after "-X".

	* 37785: Src/params.c: skip autoload parameters for "typeset -p"

2016-01-25  Barton E. Schaefer  <schaefer@zsh.org>

	* Jun T.: 37759: Src/Modules/param_private.c: save more function
	pointers from realparamtab when hacking in their replacements,
	because restoring from the original external symbols fails for
	some dynamic link schemes (e.g. 64bit Cygwin).

2016-01-25  Peter Stephenson  <p.stephenson@samsung.com>

	* 37780: Kamil Dudka: Src/utils.c: Careful in case both argzero
	and scriptname are null in zerr().

	* 37765: Src/builtin.c, Test/C04funcdef.ztst: Use FS_FUNC on
	funcstack to find autoload -X target rather than scriptname.

	* 37776: Src/utils.c: set errflag before calling zwarning() to
	avoid recursive error messages.

2016-01-23  Matthew Martin  <phy1729@gmail.com>

	* 37725: Completion/Unix/Command/_init_d: Completion: _init_d:
	add OpenBSD bits

2016-01-23  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 37703: Completion/Unix/Command/_git: Completion: git: Also
	complete sendmail commands for send-email's configuration. (after
	37666)

2016-01-21  Peter Stephenson  <p.stephenson@samsung.com>

	* 37722: Src/builtin.c, Test/C02cond.zts: test builtin should
	return status 2 on syntax error.

2016-01-20  Peter Stephenson  <p.stephenson@samsung.com>

	* 37705: Src/lex.c, Test/D04parameter.ztst: don't turn - to
	Dash after start of brace parameter.

	* unspoted: Config/version.mk: incremented version to 5.2-dev-1